--- a/assets/styles/section4/section4.css
+++ b/assets/styles/section4/section4.css
@@ -1,6 +1,6 @@
 .section-4 {
   width: 100%;
-  height: 30vh;
+  height: 50vh;
   background-color: #222;
   display: flex;
   justify-content: space-around;
@@ -20,11 +20,49 @@
   font-size: 1.5rem;
   color: #888;
 }
-.section-4 .singup-form {
+.section-4 .signup-form {
   display: flex;
   align-items: center;
+}
+.section-4 .signup-form input {
+  width: 35rem;
+  height: 5rem;
+  padding: 1rem;
+  border: 0.2rem solid #a79a2d;
+  font-size: 1.6rem;
+  font-weight: 700;
+  letter-spacing: 0.1rem;
+  color: #a79a2d;
+}
+.section-4 .signup-form input::-moz-placeholder {
+  color: #a79a2d;
+}
+.section-4 .signup-form input:-ms-input-placeholder {
+  color: #a79a2d;
+}
+.section-4 .signup-form input::placeholder {
+  color: #a79a2d;
+}
+.section-4 .signup-form .signup-form-btn {
+  position: relative;
+  left: -4.5rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: #333;
+  color: #a79a2d;
+  border: none;
+  font-size: 1.8rem;
+  cursor: pointer;
 }
 .section-4 .copyright {
   position: absolute;
   bottom: 3rem;
+  font-size: 1.7rem;
+  font-weight: 200;
+  color: #eee;
+  letter-spacing: 0.1rem;
+  border-top: 0.1rem solid #888;
+  padding-top: 3rem;
+  width: 100%;
+  text-align: center;
 }/*# sourceMappingURL=section4.css.map */
