--- a/assets/styles/section4/section4.scss
+++ b/assets/styles/section4/section4.scss
@@ -2,7 +2,7 @@
 
 .section-4{
     width: 100%;
-    height: 30vh;
+    height: 50vh;
     background-color: $backgroundColorSection2;
     display: flex;
     justify-content: space-around;
@@ -23,12 +23,47 @@
             color: #888;
         }
     }
-    .singup-form{
+    .signup-form{
         display: flex;
         align-items: center;
+
+        input{
+            width: 35rem;
+            height: 5rem;
+            padding: 1rem;
+            border: 0.2rem solid $colorIcons;
+            font-size: 1.6rem;
+            font-weight: 700;
+            letter-spacing: 0.1rem;
+            color: $colorIcons;
+
+        }
+        input::placeholder{
+            color: $colorIcons;
+        }
+        .signup-form-btn{
+            position: relative;
+            left: -4.5rem;
+            width: 4rem;
+            height: 4rem;
+            background-color: $backgroundColorSection1;
+            color: $colorIcons;
+            border: none;
+            font-size: 1.8rem;
+            cursor: pointer;
+        }
+        
     }
     .copyright{
         position: absolute;
         bottom: 3rem;
+        font-size: 1.7rem;
+        font-weight: 200;
+        color: #eee;
+        letter-spacing: 0.1rem;
+        border-top: 0.1rem solid #888;
+        padding-top: 3rem;
+        width: 100%;
+        text-align: center;
     }
 }
