--- a/assets/styles/colors/color.scss
+++ b/assets/styles/colors/color.scss
@@ -1,6 +1,12 @@
+// Navbar
+$backgroundColorNavbar: #000;
+$texColorNavbar: #aaa;
+$texColorNavbarHover: #fff;
+// End of Navbar 
+
 // Section 1
 
-$backgroundColor: rgb(102, 255, 0);
+
 $backgroundColorSection1: #333;
 $textColorTitle: #fff;
 $colorIcons: #a79a2d;
@@ -14,4 +20,4 @@ $colorName: #111;
 $backgroundColorButton: #111;
 $textColorButton: #888;
 $backgroundColorQuad: #8f8317;
-// End of Section 1
+// End of Section 2
