--- a/assets/styles/section4/section4.scss
+++ b/assets/styles/section4/section4.scss
@@ -57,7 +57,7 @@
     .copyright{
         position: absolute;
         bottom: 3rem;
-        font-size: 1.7rem;
+        font-size: 2rem;
         font-weight: 200;
         color: #eee;
         letter-spacing: 0.1rem;
@@ -65,5 +65,6 @@
         padding-top: 3rem;
         width: 100%;
         text-align: center;
+        // background-color: #eee;
     }
 }
