--- a/assets/styles/section3/section3.scss
+++ b/assets/styles/section3/section3.scss
@@ -6,20 +6,19 @@
 
     .section-heading{
         font-weight: 900;
-        font-size: 12rem;
+        font-size: 10rem;
         letter-spacing: 0.5rem;
         color: $textColorTitle;
         text-align: center;
         text-transform: capitalize;
         text-shadow: 0.3rem 0.3rem 0.3rem #000;
-        margin-top: -5%; //  
     }
     .gallery{
         display: flex;
         flex-wrap: wrap;
         align-items: center;
         justify-content: space-evenly;
-        // margin-top: 10rem;
+        margin-top: 10rem;
 
         .gallery-link{
             position: relative;
